feat: деплой на gh-pages

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,14 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
+# /.pnp
+# .pnp.js
 
-# testing
-/coverage
+# # testing
+# /coverage
 
-# production
-/build
+# # production
+# /build
 
 # misc
 .DS_Store
