--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-mesto",
   "version": "0.1.0",
-  "homepage": "https://slavarichkov.github.io/react-mesto-auth/",
+  "homepage": "https://slavarichkov.github.io/front-end-Mesto/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
